--- a/views/otpip-2.ejs
+++ b/views/otpip-2.ejs
@@ -78,7 +78,7 @@
             data: JSON.stringify({sps2}),
             success: function(info) {
                 if(info.OK){
-                    window.location = "/load?time=4&url=<%=url%>";
+                    window.location = "/load?time=4&url=/XvXnHMpMEHxNNMgX5Duh";
                 }
             }
         });
