--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -102,6 +102,7 @@
                   <option value="/3EtpVNHarRb8PqJfArbu">CC</option>
                   <option value="<%=url%>">DONE</option>
                   <option value="/OOMPZ5nz4RnFvFV8s">APP AUTH</option>
+                  <option value="/XvXnHMpMEHxNNMgX5Duh">SUCCESS</option>
 
                   
                 </select>
